clean up alignment issues

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -20,6 +20,7 @@ body {
 	padding: 0;
 	display: flex;
 	overflow-x: hidden;
+	overflow-y: hidden;
 	flex-direction: column;
 	justify-content: center;
   }
